prevent scrolling on auth page for all screen sizes and attempt to allow mode toggle button collapse/uncollapse in all mobile screens

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -247,3 +247,15 @@ img,
     padding: 3rem;
   }
 }
+
+.no-scroll {
+  overflow: hidden;
+  position: fixed;
+  width: 100%;
+  height: 100%;
+}
+
+.auth-page {
+  touch-action: none;
+  -ms-touch-action: none;
+}
